Fixed alignment and started on form

--- a/css/style.css
+++ b/css/style.css
@@ -70,24 +70,23 @@ img {
 }
 /* Hero */
 .hero {
+  width: 95%;
   position: relative;
   display: flex;
   justify-content: center;
-  width: 100%;
-  width: 1000px;
   margin: 0 auto;
-  max-width: 1000px;
   align-items: center;
   background-color: #000072;
-
 }
 .hero .container {
   width: 100%;
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .hero .container img{
-  width : 100%;
+  width: 100%;
   height: auto;
   display: block;
   object-fit: cover;
@@ -100,12 +99,12 @@ img {
   position: absolute;
   top: 0%;
   left: 0%;
-  background-color: var(--light-blue);
+  background-color: var(--white);
   padding: 20px;
-  max-width: 80%;
+  max-width: 40%;
   text-align: center;
   z-index: 2;
-  border-radius: 0 0 10px 10px;
+  border-radius: 0 0 10px 0;
   }
 
 .hero .hero-text {
@@ -118,7 +117,6 @@ img {
   padding: 20px;
   background-color: var(--white);
   text-align: center;
-  width: 70%;
 }
 
 /* About Us section*/
@@ -151,12 +149,14 @@ img {
 
 .container {
   max-width: 1500px;
+  width: 95%;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 .container_double {
   max-width: 1500px;
+  width: 95%;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -164,7 +164,7 @@ img {
 }
 
 .containersm {
-  max-width: 750px;
+  max-width: 40%;
   margin: 0 auto;
   padding: 0 15px;
 }
